@@ -1,3 +1,14 @@
+Sun Dec 22 16:28:26 CET 2013  John Tytgat  <John.Tytgat@aaug.net>
+
+	current-trunk:
+	* libdwarf/libdwarf_frame.c (_dwarf_frame_convert_inst): Remove trivial
+	dead variable assigment.
+	* libelf/elf_update.c (_libelf_write_elf): Likewise.
+	* libelf/libelf_ar.c (GET_WORD): Likewise.
+	(_libelf_ar_process_svr4_symtab): Likewise.
+	* libelftc/libelftc_dem_arm.c (read_func_ptr): Likewise.
+	* libelftc/libelftc_dem_gnu2.c (read_func_ptr): Likewise.
+
 Sun Dec 22 16:21:10 CET 2013  John Tytgat  <John.Tytgat@aaug.net>
 
 	current-trunk:
